kubernetes/applications/linkwarden/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: linkwarden
  namespace: linkwarden
  labels:
    app.kubernetes.io/instance: linkwarden
    app.kubernetes.io/name: linkwarden
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: linkwarden
      app.kubernetes.io/name: linkwarden
  serviceName: "linkwarden"
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: linkwarden
        app.kubernetes.io/name: linkwarden
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:v2.14.1
          resources:
            requests:
              memory: 2Gi
              cpu: 100m
              ephemeral-storage: 8Gi
            limits:
              memory: 2Gi
              ephemeral-storage: 8Gi
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: linkwarden-data
              mountPath: /data/data
  volumeClaimTemplates:
    - metadata:
        name: linkwarden-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "openebs"
        resources:
          requests:
            storage: 8Gi
